# Document-to-a-Full-Fledge-Application

./: .gitignore  MULTI_AGENT.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
apps/api/: Dockerfile  main.py
apps/api/routers/: jobs.py  preview.py  push.py
apps/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/components/: CoverageCard.tsx  FileDrop.tsx  Footer.tsx  Header.tsx  PreviewPanel.tsx  PushPanel.tsx  RefinePanel.tsx  RefinementSummary.tsx  SpecPanel.tsx  StageTimeline.tsx
apps/web/src/lib/: format.ts  hooks.ts  job.ts  keyStore.ts  preview.ts  push.ts  refine.ts  types.ts
apps/web/src/pages/: JobStatus.tsx  NewJob.tsx
infra/docker/: README.md
templates/react-fastapi/: .gitignore  README.md  docker-compose.yml
templates/react-fastapi/backend/: .gitignore  Dockerfile  pyproject.toml
templates/react-fastapi/backend/app/: auth.py  config.py  db.py  main.py
templates/react-fastapi/frontend/: .gitignore  package.json
templates/react-fastapi/frontend/src/: App.tsx  index.css
tests/: test_backend_codegen.py  test_db_choice.py  test_doc_parser.py  test_engineer_agent.py  test_frontend_codegen.py  test_gemini_client.py  test_generator.py  test_jobs_api.py  test_naming.py  test_openai_client.py  test_pm_agent.py  test_po_agent.py  test_preview_api.py  test_project_orchestrator.py  test_publisher.py  test_push_api.py  test_qa_agent.py  test_reconciler.py  test_refine_api.py  test_refiner.py  test_runner.py  test_runtime_agent.py  test_runtime_memory.py  test_runtime_messages.py  test_runtime_workspace.py  test_spec_extractor.py  test_test_gen.py  test_validator.py
tests/fixtures/: todo_app.md  todo_app.spec.json
(+1 files in other folders)
