[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-to-app"
version = "0.1.0"
description = "Generate full-stack applications from requirement documents."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "python-multipart>=0.0.9",
    "jsonschema>=4.23",
    "httpx>=0.27",
    "anthropic>=0.40",
    "openai>=1.50",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["packages"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
